# msglib

./: README.rst  pyproject.toml  run_tests.sh
msglib/: broker.py  client.py  handlers.py  ios.py  message.py
msglib/ios/: io_memory.py  io_sockets.py
tests/: test_message_parsing.py  test_queue.py
