[tool.poetry]
name = "msglib"
version = "0.2.0"
description = ""
authors = ["uigctaw <uigctaw@metadata.social>"]
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
bandit = "^1.7.5"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]

    [tool.pylint.messages_control]
    disable = [
        "missing-module-docstring",
        "missing-class-docstring",
        "missing-function-docstring",
        "too-few-public-methods",
        "duplicate-code",
        "no-else-return",
    ]

    [tool.pylint.basic_checker]
    good-names=['i', 'j', 'k', '_', 'fn', 'ip', 'id']


[tool.bandit]
skips = ["B101"]
